# shieldbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: main.py
bot/handlers/: menu.py  message_handler.py
bot/utils/: pki_manager.py
