[tool.poetry]
name = "shieldbot"
version = "0.1.0"
description = "A Telegram bot for secure, end-to-end encrypted conversations."
authors = ["Dmitrii Valedinskii <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "24.1.0"
aiogram = "3.14.0"
aiohappyeyeballs = "2.4.3"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
attrs = "24.2.0"
certifi = "2024.8.30"
cffi = "1.17.1"
cryptography = "43.0.3"
frozenlist = "1.5.0"
idna = "3.10"
magic-filter = "1.0.12"
multidict = "6.1.0"
propcache = "0.2.0"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
typing-extensions = "4.12.2"
yarl = "1.17.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "F", # Flake8: Errors and undefined names
    "E", # Flake8: Style issues
    "W",
    "C90",
    "I", # Import sorting
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected (intended for debugging purposes)
    "RUF012", # Mutable class attributes allowed for specific design cases
    "UP038", # Avoid fixing isinstance/issubclass tuples automatically
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true # Easier diff tracking in version control
